@@ -1,0 +1,5 @@
+DROP INDEX IF EXISTS namespaces_name_idx;
+DROP INDEX IF EXISTS namespaces_uuid_idx;
+
+DROP TABLE IF EXISTS namespaces;
+DROP SEQUENCE IF EXISTS namespaces_id_seq;
