@@ -1,0 +1,5 @@
+DROP INDEX IF EXISTS streams_uuid_idx;
+DROP INDEX IF EXISTS streams_namespace_id_name_idx;
+
+DROP TABLE IF EXISTS streams;
+DROP SEQUENCE IF EXISTS streams_id_seq;
